fixed spacing problem with projects

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -160,6 +160,7 @@
 .gtfinder { 
     background-image: url("../img/githubFinder.png");
     height: 400px; 
+    width: 400px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -169,6 +170,7 @@
 .conkeeper { 
     background-image: url("../img/contactKeeper.png");
     height: 400px; 
+    width: 400px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -176,7 +178,8 @@
 }
 .itlogger { 
     background-image: url("../img/it-logger.png");
-    height: 400px; 
+    height: 400px;
+    width: 400px; 
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -185,6 +188,7 @@
 .pos { 
     background-image: url("../img/pointOfSale.png");
     height: 400px;
+    width: 400px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
